--- a/CSS/DropdownStyles.sass
+++ b/CSS/DropdownStyles.sass
@@ -67,10 +67,14 @@ $mainfont: "Open Sans"
     z-index: 1
     position: fixed
     top: 150px
+    text-align: justify
+    padding-top: 20px
+    
+    #imgcontainer
+        text-align: center
     
     #notification
-        
-        width: 300px
+        width: 500px
         margin: auto
         padding: 5px
         font-family: "Open Sans"
@@ -82,6 +86,8 @@ $mainfont: "Open Sans"
         &:hover
             cursor: pointer
         
-        
         h3
             border-bottom: 2px solid #F6F6FC
+            
+        #signoff
+            text-align: center
